@@ -1,3 +1,7 @@
+2021-10-26  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/tidy/protect.h (Protect): Assign nullptr in dtor
+
 2021-09-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.5
